code/dotnet/NaturalLanguageProcessing/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Natural Language Processing client library for .NET

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/natural-language-processing-api)
[![Nuget](https://img.shields.io/badge/nuget-v0.40.0-orange)](https://www.nuget.org/packages/FactSet.SDK.NaturalLanguageProcessing/0.40.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Identify and extract named entities from unstructured or semi-structured text.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.40.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.NaturalLanguageProcessing -v 0.40.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.NaturalLanguageProcessing -Version 0.40.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.NaturalLanguageProcessing.Api;
using FactSet.SDK.NaturalLanguageProcessing.Client;
using FactSet.SDK.NaturalLanguageProcessing.Model;

namespace Example
{
    public static class PostAdvancedNerExtractionExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.NaturalLanguageProcessing.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AdvancedApi(config);
            var advancedRequestRoot = new AdvancedRequestRoot(); // AdvancedRequestRoot | 
            var model = "openai.gpt-5.2-2025-12-11";  // string | Optional override for the Advanced model backend. (optional)  (default to meta.llama-4-scout-instruct)

            try
            {
                // Advanced Processing
                OutputRoot result = apiInstance.PostAdvancedNerExtraction(advancedRequestRoot, model);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AdvancedApi.PostAdvancedNerExtraction: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/aiml/ner/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdvancedApi* | [**PostAdvancedNerExtraction**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/AdvancedApi.md#postadvancednerextraction) | **POST** /advanced | Advanced Processing
*ExpressApi* | [**PostExpressNerExtraction**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/ExpressApi.md#postexpressnerextraction) | **POST** /express | Express Processing


## Documentation for Models

 - [Model.AdvancedEntityType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/AdvancedEntityType.md)
 - [Model.AdvancedInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/AdvancedInput.md)
 - [Model.AdvancedRequestRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/AdvancedRequestRoot.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/ErrorResponse.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/ErrorSource.md)
 - [Model.ExpressInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/ExpressInput.md)
 - [Model.ExpressRequestRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/ExpressRequestRoot.md)
 - [Model.HTTPError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/HTTPError.md)
 - [Model.LookupStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/LookupStatus.md)
 - [Model.OutputItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/OutputItem.md)
 - [Model.OutputRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/OutputRoot.md)
 - [Model.StandardEntityType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v0/docs/StandardEntityType.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
