code/dotnet/NaturalLanguageProcessing/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Natural Language Processing client library for .NET

[![API Version](https://img.shields.io/badge/api-v1.3.0-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.NaturalLanguageProcessing)](https://www.nuget.org/packages/FactSet.SDK.NaturalLanguageProcessing)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

APIs that leverage Natural Language Processing to help extract meaningful data from unstructured text

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.3.0
- SDK version: 0.23.3
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.NaturalLanguageProcessing -v 0.23.3
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.NaturalLanguageProcessing -Version 0.23.3
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.NaturalLanguageProcessing.Api;
using FactSet.SDK.NaturalLanguageProcessing.Client;
using FactSet.SDK.NaturalLanguageProcessing.Model;

namespace Example
{
    public static class SummarizationHeadlineExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.NaturalLanguageProcessing.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AITextSummarizationApi(config);
            var summarizationRequest = new SummarizationRequest(); // SummarizationRequest |  (optional) 

            try
            {
                // Endpoint to generate a headline from text
                SummarizationResultID result = apiInstance.SummarizationHeadline(summarizationRequest);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AITextSummarizationApi.SummarizationHeadline: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/cognitive/nlp/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AITextSummarizationApi* | [**SummarizationHeadline**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AITextSummarizationApi.md#summarizationheadline) | **POST** /summarization/headline | Endpoint to generate a headline from text
*AITextSummarizationApi* | [**SummarizationHeadlineAndSummary**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AITextSummarizationApi.md#summarizationheadlineandsummary) | **POST** /summarization/headline-and-summary | Endpoint to summarize and generate a headline from text
*AITextSummarizationApi* | [**SummarizationResult**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AITextSummarizationApi.md#summarizationresult) | **GET** /summarization/result/{resultId} | Endpoint to obtain result of a particular summarization job
*AITextSummarizationApi* | [**SummarizationSummary**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AITextSummarizationApi.md#summarizationsummary) | **POST** /summarization/summary | Endpoint to summarize text
*AIThemesApi* | [**ThemesExtractThemes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AIThemesApi.md#themesextractthemes) | **POST** /themes | Endpoint to begin theme extraction job
*AIThemesApi* | [**ThemesGetStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AIThemesApi.md#themesgetstatus) | **GET** /themes/{id}/status | Endpoint to get the completion status of a themes job
*AIThemesApi* | [**ThemesGetThemes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/AIThemesApi.md#themesgetthemes) | **GET** /themes/{id} | Endpoint to get a theme (and sentiments if requested) job result
*NamedEntityRecognitionApi* | [**NerEntities**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NamedEntityRecognitionApi.md#nerentities) | **POST** /ner/entities | Endpoint to detect entities from text
*QuestionAnswerApi* | [**QnaGetAnswers**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QuestionAnswerApi.md#qnagetanswers) | **GET** /qna/answers/{id} | Endpoint to get the answer(s)
*QuestionAnswerApi* | [**QnaGetStatus**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QuestionAnswerApi.md#qnagetstatus) | **GET** /qna/answers/{id}/status | Endpoint to get the completion status for a Q&A request
*QuestionAnswerApi* | [**QnaPostQuestion**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QuestionAnswerApi.md#qnapostquestion) | **POST** /qna/answers | Endpoint to submit a question for answer(s)


## Documentation for Models

 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ErrorSource.md)
 - [Model.HTTPError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/HTTPError.md)
 - [Model.HTTPErrorRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/HTTPErrorRoot.md)
 - [Model.NEREntity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NEREntity.md)
 - [Model.NEREntityList](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NEREntityList.md)
 - [Model.NERInputDataSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NERInputDataSchema.md)
 - [Model.NERInputSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NERInputSchema.md)
 - [Model.NEROrganization](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NEROrganization.md)
 - [Model.NERResponseSchema](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/NERResponseSchema.md)
 - [Model.QnAAnswer](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QnAAnswer.md)
 - [Model.QnAAnswerParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QnAAnswerParameters.md)
 - [Model.QnAAnswerParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QnAAnswerParametersRoot.md)
 - [Model.QnAAnswerRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/QnAAnswerRoot.md)
 - [Model.SummarizationHTTPError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/SummarizationHTTPError.md)
 - [Model.SummarizationRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/SummarizationRequest.md)
 - [Model.SummarizationResult](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/SummarizationResult.md)
 - [Model.SummarizationResultID](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/SummarizationResultID.md)
 - [Model.Task](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/Task.md)
 - [Model.TaskRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/TaskRoot.md)
 - [Model.ThemeSentiment](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ThemeSentiment.md)
 - [Model.ThemeSentimentsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ThemeSentimentsRoot.md)
 - [Model.ThemesParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ThemesParameters.md)
 - [Model.ThemesParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ThemesParametersRoot.md)
 - [Model.ValidationError](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ValidationError.md)
 - [Model.ValidationErrorDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ValidationErrorDetail.md)
 - [Model.ValidationErrorDetailLocation](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/NaturalLanguageProcessing/v1/docs/ValidationErrorDetailLocation.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
